--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta  http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>灰谷网络</title>
+	<title>钱方磊</title>
 	<link rel="stylesheet" type="text/css" href="style/B_web_style.css"/>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<!--<script type="text/javascript" src="js/jquery.scrollTo.js"></script>-->
@@ -13,6 +13,8 @@
 </head>
 <body>
 	<div class="pq-header">
+		<div style="float: left;font-family:'楷体';font-size: xx-large;">
+		</div>
 		<div class="header">
 			<a href="" class="header-left"><img src="img/pq-01.png"></a>
 			<div class="header-right">
